# McCells

./: .gitignore  compute_hvgs_cluster.py  diagnose_cell_counts.ipynb  generate_download_script.py  inspect_blood_cells.ipynb  pyproject.toml  run_hvgs_slurm.sh  run_preprocessing.py  setup.sh  train_blood_cell.ipynb
.claude/: CLAUDE.md
.ipynb_checkpoints/: inspect_blood_cells-checkpoint.ipynb  pyproject-checkpoint.toml  run_hvgs_slurm-checkpoint.sh  train_blood_cell-checkpoint.ipynb
data/processed/: 2025-08-13_cell_parent_mask.pt  2025-08-13_internal_values.pkl  2025-08-13_leaf_values.pkl  2025-08-13_mapping_dict_df.csv  2025-08-13_ontology_df.csv  2025-10-17_exclusion_df.csv  2025-10-17_internal_values.pkl  2025-10-17_marginalization_df.csv  (+4 more)
hpc_workaround/: README.md  compute_hvgs.py  diagnose_gene_filter.ipynb  download_and_filter_data.py  download_data.sh  explore_soma_schema.py  get_h5ad_links.py  h5ad_links.txt  ingest_h5ad_to_soma.py  run_download.sh  run_verify_soma.sh  standardize_25935282.err  standardize_25935282.out  standardize_25935362.out  standardize_h5ad_indices.py  test_wget.sh  train_pytorch_from_soma.py  verify_local_soma.py  verify_soma_cell_counts.py
myenv/: pyvenv.cfg
old_reference/: README.md  blood_cell_types.txt  mccell_preprocess_from_disk.ipynb  model_from_disk.ipynb  requirements.txt
temp/: blood_cell_ontology.txt  classify_nodes.py  detailed_verify.py  find_cl_id.py  inspect_metadata.py  save_cell_types.py  t.py  temp_read_parquet.py  test_data_loader.py  verify_data_loader.py  verify_mask.py  verify_ontology.py  verify_utils.py
(+27 files in other folders)
